# leadlock

leadlock/: .env.example  .gitignore  AUDIT_LOG.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.caddy  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
leadlock/.claude/: settings.json
leadlock/.claude/plans/: peppy-sprouting-glacier.md
leadlock/.github/workflows/: ci.yml
leadlock/alembic/: env.py
leadlock/alembic/versions/: 001_initial_schema.py  002_add_admin_and_outreach.py  003_add_sales_engine.py  004_sales_engine_fixes.py  005_scrape_query_rotation.py  006_core_autonomy.py  007_client_dashboard.py  008_admin_botswarm.py  009_multi_channel.py  010_webhook_events_and_failed_leads.py  011_email_verification.py  012_billing_fields.py  013_registration_fields.py  014_sender_name.py  015_booking_url.py  016_generation_failures_and_indexes.py  017_agent_army_phase1.py  018_agent_army_phase2.py  019_intelligence_loop.py  020_tos_billing_status.py  021_add_fallback_used_to_outreach_emails.py  022_add_sales_tenant_isolation_and_mailboxes.py  023_add_ai_disclosure_tracking.py  (+9 more)
leadlock/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
leadlock/scripts/: activate_production.py  add_sending_domain.py  backfill_discover_emails.py  backfill_research.py  backfill_verify_emails.py  backup_db.sh  run_compliance_audit.py  seed_demo_account.py  seed_test_client.py  simulate_lead.py
leadlock/src/: config.py  database.py  main.py
leadlock/tests/: conftest.py  test_ab_testing.py  test_admin_reporting_service.py  test_agent_activity.py  test_agent_fleet.py  test_agents.py  test_agents_extended.py  test_ai_service.py  test_alerting_extended.py  test_analytics_service.py  test_api_admin_dashboard.py  test_api_billing_endpoints.py  test_api_campaign_detail.py  test_api_dashboard.py  test_api_health.py  test_api_integrations.py  test_api_metrics.py  test_api_sales_engine.py  test_api_webhooks.py  test_billing.py  test_billing_extended.py  test_booking.py  test_booking_reminder.py  test_channel_expander.py  test_cold_email.py  test_compliance.py  test_conductor.py  test_config_cache.py  test_content_factory.py  test_coverage_gaps.py  test_crm_integrations.py  test_dedup.py  test_dedup_extended.py  test_deliverability.py  test_deliverability_extended.py  test_e2e.py  test_email_constants.py  test_email_discovery.py  test_email_finder.py  test_email_quality_gate.py  (+60 more)
(+288 files in other folders)
