[project]
name = "leadlock"
version = "2.0.0"
description = "AI Speed-to-Lead Platform for Home Services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "twilio>=9.0.0",
    "sendgrid>=6.11.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "cryptography>=43.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
